Archive2/0a/d9847605eb82e0/output
main.cpp:15:13: error: no matching function for call to 'foo'
int main(){ foo<R, r>(); }
            ^~~~~~~~~
main.cpp:4:6: note: candidate template ignored: invalid explicitly-specified argument for template parameter 't'
void foo(){ std::cout << "foo()" << std::endl; }
     ^
1 error generated.
